<project xmlns="https://maven.apache.org/POM/4.0.0"
	xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>de</groupId>
	<artifactId>gbanking</artifactId>
	<version>0.1.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>GBanking</name>
	<description>Desktop-Banking-Anwendung auf Basis von JavaFX</description>
	<url>https://github.com/ZfT2/gbanking</url>

	<licenses>
		<license>
			<name>GNU General Public License v3.0</name>
			<url>https://www.gnu.org/licenses/gpl-3.0.html</url>
			<distribution>repo</distribution>
			<comments>See LICENSE file in the project root directory.</comments>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>ZfT2</id>
			<name>Georg</name>
			<url>https://github.com/ZfT2</url>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:https://github.com/ZfT2/gbanking.git</connection>
		<developerConnection>scm:git:ssh://git@github.com/ZfT2/gbanking.git</developerConnection>
		<url>https://github.com/ZfT2/gbanking</url>
		<tag>HEAD</tag>
	</scm>

	<properties>
		<app.name>GBanking</app.name>
		<app.mainClass>de.gbanking.GBanking</app.mainClass>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<maven.compiler.release>17</maven.compiler.release>

		<javafx.version>21.0.10</javafx.version>
		<log4j.version>2.24.3</log4j.version>
		<sqlitejdbc.version>3.50.3.0</sqlitejdbc.version>
		<commonscsv.version>1.14.1</commonscsv.version>
		<hbci4j.version>4.1.3</hbci4j.version>
		<fp32xmlextract.version>0.1.0</fp32xmlextract.version>
		
		<junit.version>5.14.3</junit.version>
		<mockito.version>5.23.0</mockito.version>
		<mockitoinline.version>5.2.0</mockitoinline.version>
		<xmlunit.version>2.11.0</xmlunit.version>

		<maven.compiler.plugin.version>3.15.0</maven.compiler.plugin.version>
		<maven.jar.plugin.version>3.4.2</maven.jar.plugin.version>
		<maven.assembly.plugin.version>3.7.1</maven.assembly.plugin.version>
		<maven.versions.plugin.version>2.18.0</maven.versions.plugin.version>
		<maven.enforcer.plugin.version>3.5.0</maven.enforcer.plugin.version>
		<maven.javafx.plugin.version>0.0.8</maven.javafx.plugin.version>

		<project.build.outputTimestamp>${maven.build.timestamp}</project.build.outputTimestamp>

	</properties>

	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>de.fp32xmlextract</groupId>
			<artifactId>fp32xmlextract</artifactId>
			<version>${fp32xmlextract.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-csv</artifactId>
			<version>${commonscsv.version}</version>
		</dependency>

		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>${sqlitejdbc.version}</version>
		</dependency>

		<dependency>
			<groupId>com.github.hbci4j</groupId>
			<artifactId>hbci4j-core</artifactId>
			<version>${hbci4j.version}</version>
		</dependency>

		<!-- Test Dependencies-->

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-inline</artifactId>
			<version>${mockitoinline.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.xmlunit</groupId>
			<artifactId>xmlunit-core</artifactId>
			<version>${xmlunit.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
				<excludes>
					<exclude>build-info.properties</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>build-info.properties</include>
				</includes>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.plugin.version}</version>
				<configuration>
					<release>${maven.compiler.release}</release>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven.jar.plugin.version}</version>
				<configuration>
					<archive>
						<manifest>
							<mainClass>${app.mainClass}</mainClass>
						</manifest>
						<manifestEntries>
							<Implementation-Version>${project.version}</Implementation-Version>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>${maven.javafx.plugin.version}</version>
				<configuration>
					<mainClass>${app.mainClass}</mainClass>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>${maven.versions.plugin.version}</version>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>windows</id>
			<dependencies>
				<dependency>
					<groupId>org.openjfx</groupId>
					<artifactId>javafx-base</artifactId>
					<version>${javafx.version}</version>
					<classifier>win</classifier>
					<scope>runtime</scope>
				</dependency>
				<dependency>
					<groupId>org.openjfx</groupId>
					<artifactId>javafx-graphics</artifactId>
					<version>${javafx.version}</version>
					<classifier>win</classifier>
					<scope>runtime</scope>
				</dependency>
				<dependency>
					<groupId>org.openjfx</groupId>
					<artifactId>javafx-controls</artifactId>
					<version>${javafx.version}</version>
					<classifier>win</classifier>
					<scope>runtime</scope>
				</dependency>
			</dependencies>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-assembly-plugin</artifactId>
						<version>${maven.assembly.plugin.version}</version>
						<executions>
							<execution>
								<id>dist-windows</id>
								<phase>package</phase>
								<goals>
									<goal>single</goal>
								</goals>
								<configuration>
									<descriptors>
										<descriptor>src/assembly/windows.xml</descriptor>
									</descriptors>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>linux</id>
			<dependencies>
				<dependency>
					<groupId>org.openjfx</groupId>
					<artifactId>javafx-base</artifactId>
					<version>${javafx.version}</version>
					<classifier>linux</classifier>
					<scope>runtime</scope>
				</dependency>
				<dependency>
					<groupId>org.openjfx</groupId>
					<artifactId>javafx-graphics</artifactId>
					<version>${javafx.version}</version>
					<classifier>linux</classifier>
					<scope>runtime</scope>
				</dependency>
				<dependency>
					<groupId>org.openjfx</groupId>
					<artifactId>javafx-controls</artifactId>
					<version>${javafx.version}</version>
					<classifier>linux</classifier>
					<scope>runtime</scope>
				</dependency>
			</dependencies>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-assembly-plugin</artifactId>
						<version>${maven.assembly.plugin.version}</version>
						<executions>
							<execution>
								<id>dist-linux</id>
								<phase>package</phase>
								<goals>
									<goal>single</goal>
								</goals>
								<configuration>
									<descriptors>
										<descriptor>src/assembly/linux.xml</descriptor>
									</descriptors>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>mac</id>
			<dependencies>
				<dependency>
					<groupId>org.openjfx</groupId>
					<artifactId>javafx-base</artifactId>
					<version>${javafx.version}</version>
					<classifier>mac</classifier>
					<scope>runtime</scope>
				</dependency>
				<dependency>
					<groupId>org.openjfx</groupId>
					<artifactId>javafx-graphics</artifactId>
					<version>${javafx.version}</version>
					<classifier>mac</classifier>
					<scope>runtime</scope>
				</dependency>
				<dependency>
					<groupId>org.openjfx</groupId>
					<artifactId>javafx-controls</artifactId>
					<version>${javafx.version}</version>
					<classifier>mac</classifier>
					<scope>runtime</scope>
				</dependency>
			</dependencies>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-assembly-plugin</artifactId>
						<version>${maven.assembly.plugin.version}</version>
						<executions>
							<execution>
								<id>dist-mac</id>
								<phase>package</phase>
								<goals>
									<goal>single</goal>
								</goals>
								<configuration>
									<descriptors>
										<descriptor>src/assembly/mac.xml</descriptor>
									</descriptors>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-enforcer-plugin</artifactId>
						<version>${maven.enforcer.plugin.version}</version>
						<executions>
							<execution>
								<id>enforce-java</id>
								<goals>
									<goal>enforce</goal>
								</goals>
								<configuration>
									<rules>
										<requireJavaVersion>
											<version>[17,)</version>
										</requireJavaVersion>
									</rules>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>